--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,7 +80,7 @@ header {
 }
 
 h1 {
-    font-family:'OPTIEagle-Bold';
+    font-family:'OPTIEagle-Bold', Arial, Helvetica, sans-serif;
     font-size: 38px;
     text-align: center;
     color: #222222;
