--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,8 +96,11 @@ h1 {
     font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
     font-size: 18px;
     margin-bottom: 20px;
+    padding-top: 50px;
     width: 500px;
     max-width: 70%;
+    background-color: #F1F1F1;
+    border: 1px solid black;
 }
 
 .buttons {
@@ -183,6 +186,12 @@ footer {
         border-right: none;
     }
     .buttons {
-        padding-bottom: 80px;
+        padding-bottom: 10px;
+    }
+    footer {
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        position:initial;
     }
 }
