accessibility check + label replacement

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,7 +129,7 @@ button:hover {
     background-color: #656565;
 }
 
-label {
+h2 {
     display: block;
     margin: 0 auto;
     text-align: center;
